--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^11.2.1",
+    "discord.js-musicbot-addon": "^1.10.3",
     "ffmpeg-binaries": "^3.2.2-3",
     "jimp": "^0.2.28",
     "moment": "^2.18.1",
     "ms": "^1.0.0",
+    "opusscript": "0.0.6",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "zalgotxt": "^0.1.0"
